--- a/base/src/main/res/drawable/hv_shadow.xml
+++ b/base/src/main/res/drawable/hv_shadow.xml
@@ -5,7 +5,7 @@
             android:angle="90"
             android:centerColor="@color/white"
             android:endColor="@color/white"
-            android:startColor="#000"
+            android:startColor="@color/main_color_gray_lt"
             android:type="linear" />
     <size android:height="40dp"/>
 </shape>
