--- a/base/src/main/res/layout/m_category_circle.xml
+++ b/base/src/main/res/layout/m_category_circle.xml
@@ -2,166 +2,187 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:bind="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="category"
             type="com.shopify.shopifyapp.homesection.models.CategoryCircle" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
+
         <RelativeLayout
+            android:id="@+id/cat_one"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:id="@+id/cat_one"
-            android:tag="cat_one"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/cat_two"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
             android:onClick="@{view->category.catClick(view,category)}"
-            app:layout_constraintHorizontal_weight="1">
+            android:tag="cat_one"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cat_two"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_one"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_centerInParent="true"
-                android:id="@+id/image_one"
-                bind:circleImageUrl="@{category.cat_image_one}"
-                />
+                bind:circleImageUrl="@{category.cat_image_one}" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/cat_text_one"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:texttype="normal"
-                android:id="@+id/cat_text_one"
-                android:text="@{category.cat_text_one}"
-                android:singleLine="true"
                 android:layout_below="@id/image_one"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@{category.cat_text_one}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center" />
+                app:texttype="normal" />
 
 
         </RelativeLayout>
+
         <RelativeLayout
+            android:id="@+id/cat_two"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:id="@+id/cat_two"
-            android:tag="cat_two"
-            app:layout_constraintStart_toEndOf="@id/cat_one"
-            app:layout_constraintEnd_toStartOf="@id/cat_three"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
             android:onClick="@{view->category.catClick(view,category)}"
-            app:layout_constraintHorizontal_weight="1">
+            android:tag="cat_two"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cat_three"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@id/cat_one"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_two"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_centerInParent="true"
-                android:id="@+id/image_two"
-                bind:circleImageUrl="@{category.cat_image_two}"
-                />
+                bind:circleImageUrl="@{category.cat_image_two}" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/cat_text_two"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:texttype="normal"
-                android:id="@+id/cat_text_two"
                 android:layout_below="@id/image_two"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
                 android:singleLine="true"
                 android:text="@{category.cat_text_two}"
-                android:layout_marginTop="2dp"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center" />
+                app:texttype="normal" />
 
         </RelativeLayout>
+
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="100dp"
             android:id="@+id/cat_three"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:onClick="@{view->category.catClick(view,category)}"
             android:tag="cat_three"
-            app:layout_constraintStart_toEndOf="@id/cat_two"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/cat_four"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="@{view->category.catClick(view,category)}"
-            app:layout_constraintHorizontal_weight="1">
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@id/cat_two"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_centerInParent="true"
                 android:id="@+id/image_three"
-                bind:circleImageUrl="@{category.cat_image_three}"/>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerInParent="true"
+                bind:circleImageUrl="@{category.cat_image_three}" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:texttype="normal"
                 android:id="@+id/cat_text_three"
-                android:singleLine="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/image_three"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:singleLine="true"
                 android:text="@{category.cat_text_three}"
-                android:layout_marginTop="2dp"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center" />
+                app:texttype="normal" />
 
         </RelativeLayout>
+
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="100dp"
             android:id="@+id/cat_four"
-            android:tag="cat_four"
-            app:layout_constraintStart_toEndOf="@id/cat_three"
-            app:layout_constraintEnd_toStartOf="@id/cat_five"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="@{view->category.catClick(view,category)}"
-            app:layout_constraintHorizontal_weight="1">
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_centerInParent="true"
-                android:id="@+id/image_four"
-               bind:circleImageUrl="@{category.cat_image_four}"/>
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:texttype="normal"
-                android:id="@+id/cat_text_four"
-                android:singleLine="true"
-                android:layout_below="@id/image_four"
-                android:text="@{category.cat_text_four}"
-                android:layout_marginTop="2dp"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center" />
-
-        </RelativeLayout>
-        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:id="@+id/cat_five"
-            android:tag="cat_five"
-            app:layout_constraintStart_toEndOf="@id/cat_four"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
             android:onClick="@{view->category.catClick(view,category)}"
-            app:layout_constraintHorizontal_weight="1">
+            android:tag="cat_four"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/cat_five"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@id/cat_three"
+            app:layout_constraintTop_toTopOf="parent">
+
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_four"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_centerInParent="true"
-                android:id="@+id/image_five"
-                bind:circleImageUrl="@{category.cat_image_five}"/>
+                bind:circleImageUrl="@{category.cat_image_four}" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/cat_text_four"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:texttype="normal"
-                android:id="@+id/cat_text_five"
+                android:layout_below="@id/image_four"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
                 android:singleLine="true"
-                android:layout_below="@id/image_five"
-                android:text="@{category.cat_text_five}"
-                android:layout_marginTop="2dp"
+                android:text="@{category.cat_text_four}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center" />
+                app:texttype="normal" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/cat_five"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:onClick="@{view->category.catClick(view,category)}"
+            android:tag="cat_five"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@id/cat_four"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/image_five"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerInParent="true"
+                bind:circleImageUrl="@{category.cat_image_five}" />
+
+            <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/cat_text_five"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/image_five"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="@{category.cat_text_five}"
+                android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                app:texttype="normal" />
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
