--- a/base/src/main/res/layout/m_collection_item.xml
+++ b/base/src/main/res/layout/m_collection_item.xml
@@ -32,33 +32,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"
-                bind:imageUrl="@{commondata.imageurl}" />
+                android:background="@drawable/hv_shadow">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:alpha="0.5"
-                android:layout_gravity="bottom"
-                android:background="@drawable/hv_shadow" />
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    bind:imageUrl="@{commondata.imageurl}" />
 
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="5dp"
-                android:gravity="center"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:text="@{categorydata.category_name}"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                app:texttype="whitetext" />
+                <com.shopify.shopifyapp.customviews.MageNativeTextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:text="@{categorydata.category_name}"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    app:texttype="whitetext" />
+            </FrameLayout>
+
+
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
