--- a/base/src/main/res/layout/m_customisable_list.xml
+++ b/base/src/main/res/layout/m_customisable_list.xml
@@ -19,9 +19,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main_cintainer"
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
 
         <androidx.cardview.widget.CardView
@@ -37,14 +37,15 @@
                 android:id="@+id/main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/image"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
                     android:contentDescription="@string/image"
+                    android:padding="0.5dp"
                     android:scaleType="fitXY"
                     app:layout_constraintDimensionRatio="W,1:1"
                     app:layout_constraintEnd_toStartOf="@id/nameandpricesection"
@@ -65,6 +66,7 @@
                     android:id="@+id/nameandpricesection"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_weight="0.6"
@@ -88,7 +90,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintEnd_toEndOf="@+id/name"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/name">
 
@@ -111,7 +113,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:layout_marginEnd="5dp"
                             android:gravity="center_vertical"
                             android:text="@{listdata.specialprice}"
                             android:textAppearance="?android:attr/textAppearanceListItemSmall"
