--- a/base/src/main/res/layout/m_multiplegrid.xml
+++ b/base/src/main/res/layout/m_multiplegrid.xml
@@ -24,7 +24,12 @@
         android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:paddingStart="2dp"
+        android:paddingTop="1dp"
+        android:paddingEnd="2dp"
+        android:paddingBottom="2dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
@@ -65,9 +70,10 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/nameandpricesection"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="4dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/image">
 
@@ -93,10 +99,10 @@
                         android:layout_marginStart="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="2dp"
-                        android:gravity="center_vertical"
-                        android:text="@{listdata.specialprice}"
+                        android:gravity="center"
+                        android:text="@{listdata.specialprice == null ? listdata.regularprice:listdata.specialprice}"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                        android:visibility="@{listdata.specialprice == null ? View.GONE : View.VISIBLE}"
+
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/regularprice"
@@ -109,9 +115,10 @@
                         android:layout_marginStart="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="2dp"
-                        android:gravity="center_vertical"
+                        android:gravity="center"
                         android:text="@{listdata.regularprice}"
                         android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                        android:visibility="@{listdata.specialprice == null ? View.INVISIBLE : View.VISIBLE}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/name"
