--- a/base/src/main/res/layout/m_product_slider.xml
+++ b/base/src/main/res/layout/m_product_slider.xml
@@ -18,8 +18,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/headerback"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:paddingStart="8dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="12dp"
             android:visibility="@{productslider.headertextvisibility}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -28,7 +32,8 @@
                 android:id="@+id/headertext"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{productslider.headertext}"
@@ -44,7 +49,6 @@
                 android:id="@+id/actiontext"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:gravity="center"
@@ -120,7 +124,7 @@
                 android:maxLines="1"
                 android:text="@{productslider.timertextmessage}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:visibility="@{productslider.timericon}"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
