--- a/base/src/main/res/layout/m_slideritemone.xml
+++ b/base/src/main/res/layout/m_slideritemone.xml
@@ -22,14 +22,16 @@
         android:id="@+id/card"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="8dp">
+        app:cardCornerRadius="16dp"
+        android:layout_margin="5dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:layout_marginStart="1.2dp"
+            android:layout_marginEnd="1.2dp"
+            android:layout_marginBottom="5dp"
             android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}">
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -58,7 +60,10 @@
                 android:id="@+id/nameandpricesection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image">
 
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
