--- a/base/src/main/res/layout/m_count.xml
+++ b/base/src/main/res/layout/m_count.xml
@@ -47,12 +47,18 @@
             app:solid_icon="true" />
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/white_border_circle"
+        android:gravity="center" />
+
     <RelativeLayout
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/black"
-
         android:id="@+id/back"
         android:gravity="center">
 
