--- a/base/src/main/res/layout/m_wishcount.xml
+++ b/base/src/main/res/layout/m_wishcount.xml
@@ -18,41 +18,49 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
     android:padding="5dp">
+
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        >
+        android:layout_marginTop="10dp">
+
         <info.androidhive.fontawesome.FontTextView
+            android:id="@+id/cart_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:id="@+id/cart_icon"
             android:layout_centerInParent="true"
-            android:gravity="center_horizontal"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
             android:contentDescription="@string/search"
-            android:tint="@color/main_color_gray_lt"
+            android:gravity="center_horizontal"
             android:text="&#xf004;"
             android:textColor="@color/main_color_gray_lt"
             android:textSize="16sp"
+            android:tint="@color/main_color_gray_lt"
             app:solid_icon="true" />
     </RelativeLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/white_border_circle"
+        android:gravity="center" />
+
     <RelativeLayout
+        android:id="@+id/back"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/black"
-        android:id="@+id/back"
         android:gravity="center">
 
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
