--- a/base/src/main/res/layout/review_form.xml
+++ b/base/src/main/res/layout/review_form.xml
@@ -9,17 +9,30 @@
         <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/radius_dialog_shape"
-            android:padding="10dp">
+            android:background="@drawable/alert_dialog_shape"
+            android:paddingLeft="10dp"
+            android:paddingTop="15dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="25dp">
+
+            <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Write A Review"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:texttype="bold" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/roboto_medium"
                 android:text="@string/please_select_rating"
                 android:textSize="13sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/close_but" />
 
@@ -31,6 +44,7 @@
                 android:layout_marginTop="10dp"
                 android:progressBackgroundTint="@color/gray_color"
                 android:progressTint="@color/appTheme"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -70,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:padding="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/customer_name">
+                app:layout_constraintTop_toBottomOf="@+id/reviewer_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/title_edt"
@@ -113,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:padding="5dp"
-                app:layout_constraintTop_toBottomOf="@+id/review_body">
+                app:layout_constraintTop_toBottomOf="@+id/customer_name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_edt"
@@ -123,6 +137,7 @@
                     android:fontFamily="@font/roboto_medium"
                     android:hint="@string/email"
                     android:imeOptions="actionDone"
+                    android:inputType="textEmailAddress"
                     android:padding="8dp"
                     android:singleLine="true"
                     android:textSize="12sp" />
@@ -131,12 +146,13 @@
 
             <com.shopify.shopifyapp.customviews.MageNativeButton
                 android:id="@+id/submit_review"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/submit"
                 app:buttontype="normal"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reviewer_email" />
+                app:layout_constraintTop_toBottomOf="@+id/review_body" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
