--- a/base/src/main/res/layout/review_list_item.xml
+++ b/base/src/main/res/layout/review_list_item.xml
@@ -1,69 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+
     <data>
+
         <variable
             name="review_list"
             type="com.shopify.shopifyapp.productsection.models.Review" />
     </data>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        app:cardBackgroundColor="@color/white"-->
+    <!--        app:cardUseCompatPadding="true"-->
+    <!--        app:layout_constraintTop_toTopOf="parent">-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:padding="10dp">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:id="@+id/circular_name"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <RatingBar
-                android:id="@+id/rating_bar"
-                style="@style/Widget.AppCompat.RatingBar.Small"
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/shortname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:progressBackgroundTint="@color/black"
-                android:progressTint="@color/appTheme"
+                android:padding="20dp"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/reviewer_name"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:ellipsize="end"
-                android:text="@{review_list.reviewerName}"
-                android:fontFamily="@font/roboto_medium"
-                android:maxLines="2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/review_txt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/roboto_light"
-                android:textSize="12sp"
-                android:text="@{review_list.content}"
-                app:layout_constraintTop_toBottomOf="@+id/reviewer_name"
-                tools:layout_editor_absoluteX="10dp" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/review_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@{review_list.reviewDate}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+        <RatingBar
+            android:id="@+id/rating_bar"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:progressBackgroundTint="@color/black"
+            android:progressTint="@color/appTheme"
+            app:layout_constraintStart_toEndOf="@+id/circular_name"
+            app:layout_constraintTop_toBottomOf="@+id/reviewer_name" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/reviewer_name"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_medium"
+            android:maxLines="2"
+            android:text="@{review_list.reviewerName}"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/circular_name"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/review_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/roboto_light"
+            android:text="@{review_list.reviewTitle}"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/review_txt"
+            app:layout_constraintTop_toBottomOf="@+id/circular_name" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/review_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_light"
+            android:maxLines="4"
+            android:text="@{review_list.content}"
+            android:textSize="14sp"
+
+            app:layout_constraintTop_toBottomOf="@+id/review_title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/review_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@{review_list.reviewDate}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reviewer_name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--    </androidx.cardview.widget.CardView>-->
 </layout>
 
