--- a/base/src/main/res/layout/swatches_list.xml
+++ b/base/src/main/res/layout/swatches_list.xml
@@ -14,23 +14,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Color"
-            app:texttype="normal"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:texttype="normal" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/variant_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@+id/variant_title"
-            tools:itemCount="4"
             tools:listitem="@layout/swatches_list_item" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/variant_list"
-            android:background="@color/gray_color"/>
+            android:background="@color/gray_color"
+            app:layout_constraintTop_toBottomOf="@+id/variant_list" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
