--- a/base/src/main/res/layout/activity_quick_add.xml
+++ b/base/src/main/res/layout/activity_quick_add.xml
@@ -47,6 +47,19 @@
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@+id/variantheading" />
 
+        <com.shopify.shopifyapp.customviews.MageNativeTextView
+            android:id="@+id/available_qty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            android:layout_marginEnd="10dp"
+            android:textStyle="normal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/variant_list"
+            app:texttype="normal" />
+
 
         <LinearLayout
             android:id="@+id/qtysection"
@@ -56,14 +69,14 @@
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/variant_list">
+            app:layout_constraintTop_toBottomOf="@+id/available_qty">
 
             <ImageView
                 android:id="@+id/decrese"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:onClick="@{view->handler.decrease(view)}"
                 android:contentDescription="@string/image"
+                android:onClick="@{view->handler.decrease(view)}"
                 android:src="@drawable/minu" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
@@ -82,8 +95,8 @@
                 android:id="@+id/increase"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:onClick="@{view->handler.increase(view)}"
                 android:contentDescription="@string/image"
+                android:onClick="@{view->handler.increase(view)}"
                 android:src="@drawable/plus" />
         </LinearLayout>
 
@@ -100,7 +113,7 @@
             android:textColor="@color/appTheme"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/variant_list" />
+            app:layout_constraintTop_toBottomOf="@+id/available_qty" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
