--- a/base/src/main/res/layout/m_autosearch.xml
+++ b/base/src/main/res/layout/m_autosearch.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-
-    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,6 +11,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/searchlist"
             app:edittype="normal"
+            android:singleLine="true"
+            android:textCursorDrawable="@drawable/black_cursor"
             android:background="@drawable/round_corner_gray"
             android:textColorHint="@color/black"
             android:padding="15dp"
