Solved some issues and redesign product list and cart list page

--- a/base/src/main/res/layout/m_product_slider.xml
+++ b/base/src/main/res/layout/m_product_slider.xml
@@ -124,7 +124,7 @@
                 android:maxLines="1"
                 android:text="@{productslider.timertextmessage}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:visibility="gone"
+                android:visibility="@{productslider.timericon}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
