--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#008000</color>
     <color name="light_cream">#FFFFFADC</color>
     <color name="red">#F90A0B</color>
+    <color name="price_red">#F90A0B</color>
 </resources>
