--- a/base/src/main/res/layout/m_cartitem.xml
+++ b/base/src/main/res/layout/m_cartitem.xml
@@ -1,216 +1,254 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
+
     <data>
+
+        <import type="android.view.View" />
+
         <variable
             name="variantdata"
             type="com.shopify.shopifyapp.cartsection.models.CartListItem" />
+
         <variable
             name="commondata"
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
+
         <variable
             name="handlers"
             type="com.shopify.shopifyapp.cartsection.adapters.CartListAdapter.ClickHandlers" />
     </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         bind:cardCornerRadius="2dp"
         bind:cardElevation="2dp"
         bind:cardUseCompatPadding="true">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            >
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/image"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_margin="5dp"
                 android:contentDescription="@string/image"
                 bind:imageUrl="@{commondata.imageurl}"
-                android:layout_width="100dp"
-                android:layout_height="0dp"
-                bind:layout_constraintDimensionRatio="H,1:1.2"
-                bind:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="5dp"
                 bind:layout_constraintStart_toStartOf="parent"
-                />
+                bind:layout_constraintTop_toTopOf="parent" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/image"
-                bind:layout_constraintTop_toTopOf="parent"
-                bind:layout_constraintEnd_toEndOf="parent"
-                bind:texttype="normal"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@{variantdata.productname}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                />
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:id="@+id/specialprice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                bind:layout_constraintEnd_toEndOf="parent"
                 bind:layout_constraintStart_toEndOf="@id/image"
-                bind:layout_constraintTop_toBottomOf="@id/name"
-                bind:texttype="bold"
-                android:visibility="gone"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:text="@{variantdata.specialprice}"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:id="@+id/regularprice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/specialprice"
-                bind:layout_constraintTop_toBottomOf="@id/name"
-                bind:texttype="normal"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="4dp"
-                android:text="@{variantdata.normalprice}"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
-            <com.shopify.shopifyapp.customviews.MageNativeTextView
-                android:id="@+id/offertext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/regularprice"
-                bind:layout_constraintTop_toBottomOf="@id/name"
-                bind:texttype="normal"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="4dp"
-                android:textColor="@color/green"
-                android:visibility="gone"
-                android:text="@{variantdata.offertext}"
-                android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
+                bind:layout_constraintTop_toTopOf="parent"
+                bind:texttype="bold" />
+
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/variant_one"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/image"
-                bind:layout_constraintTop_toBottomOf="@id/regularprice"
-                bind:texttype="bold"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="7dp"
+                android:gravity="center_vertical"
                 android:text="@{variantdata.variant_one}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
+                android:visibility="@{variantdata.variant_one !=null ? View.VISIBLE : View.GONE}"
+                bind:layout_constraintStart_toEndOf="@id/image"
+                bind:layout_constraintTop_toBottomOf="@id/name"
+                bind:texttype="normal" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/variant_two"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/image"
-                bind:layout_constraintTop_toBottomOf="@id/variant_one"
-                bind:texttype="bold"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
                 android:text="@{variantdata.variant_two}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
+                android:visibility="@{variantdata.variant_two !=null ? View.VISIBLE : View.GONE}"
+                bind:layout_constraintStart_toEndOf="@id/image"
+                bind:layout_constraintTop_toBottomOf="@id/variant_one"
+                bind:texttype="normal" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/variant_three"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                bind:layout_constraintStart_toEndOf="@id/image"
-                bind:layout_constraintTop_toBottomOf="@id/variant_two"
-                bind:texttype="bold"
                 android:layout_marginStart="8dp"
+                android:gravity="center_vertical"
                 android:text="@{variantdata.variant_three}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:gravity="center_vertical" />
+                android:visibility="@{variantdata.variant_three !=null ? View.VISIBLE : View.GONE}"
+                bind:layout_constraintStart_toEndOf="@id/image"
+                bind:layout_constraintTop_toBottomOf="@id/variant_two"
+                bind:texttype="normal" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/price_section"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="5dp"
+                bind:layout_constraintBottom_toTopOf="@id/line"
+                bind:layout_constraintEnd_toStartOf="@+id/qtysection"
+                bind:layout_constraintStart_toEndOf="@id/image"
+                bind:layout_constraintTop_toBottomOf="@id/variant_three">
+
+                <com.shopify.shopifyapp.customviews.MageNativeTextView
+                    android:id="@+id/specialprice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:text="@{variantdata.specialprice}"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    android:visibility="gone"
+                    bind:layout_constraintStart_toStartOf="parent"
+                    bind:layout_constraintTop_toTopOf="parent"
+                    bind:texttype="bold" />
+
+                <com.shopify.shopifyapp.customviews.MageNativeTextView
+                    android:id="@+id/regularprice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center_vertical"
+                    android:text="@{variantdata.normalprice}"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    bind:layout_constraintStart_toStartOf="@id/specialprice"
+                    bind:layout_constraintTop_toBottomOf="@+id/specialprice"
+                    bind:texttype="normal" />
+
+                <com.shopify.shopifyapp.customviews.MageNativeTextView
+                    android:id="@+id/offertext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="3dp"
+                    android:gravity="center_vertical"
+                    android:text="@{variantdata.offertext}"
+                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    android:textColor="@color/green"
+                    android:visibility="gone"
+                    bind:layout_constraintStart_toEndOf="@id/regularprice"
+                    bind:layout_constraintTop_toBottomOf="@+id/specialprice"
+                    bind:texttype="normal" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
             <LinearLayout
                 android:id="@+id/qtysection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                bind:layout_constraintTop_toBottomOf="@id/variant_three"
-                bind:layout_constraintStart_toEndOf="@id/image"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 bind:layout_constraintBottom_toTopOf="@id/line"
-                android:layout_marginStart="8dp"
-                android:orientation="horizontal">
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintStart_toEndOf="@+id/price_section"
+                bind:layout_constraintTop_toBottomOf="@id/variant_three">
+
                 <ImageView
                     android:id="@+id/decrese"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:contentDescription="@string/image"
                     android:onClick="@{view->handlers.decrease(view,variantdata)}"
-                    android:src="@drawable/minu" />
+                    android:src="@drawable/minus_icon" />
+
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/quantity"
-                    android:layout_width="wrap_content"
+                    android:layout_width="45dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginEnd="15dp"
                     android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="@drawable/grey_filled_shape"
                     android:gravity="center"
-                    bind:texttype="bold"
+                    android:padding="10dp"
                     android:text="@{variantdata.qty}"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    bind:texttype="bold" />
+
                 <ImageView
                     android:id="@+id/increase"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:onClick="@{view->handlers.increase(view,variantdata)}"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:contentDescription="@string/image"
-                    android:src="@drawable/plus" />
+                    android:onClick="@{view->handlers.increase(view,variantdata)}"
+                    android:src="@drawable/plus_icon" />
             </LinearLayout>
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/line"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_margin="5dp"
                 android:alpha="0.5"
-                android:id="@+id/line"
                 android:background="@color/gray_color"
                 bind:layout_constraintStart_toStartOf="parent"
-                bind:layout_constraintTop_toBottomOf="@id/qtysection"
-                android:layout_margin="5dp"
-                bind:texttype="normal"/>
+                bind:layout_constraintTop_toBottomOf="@id/image"
+                bind:texttype="normal" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/remove"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_margin="2dp"
-                bind:layout_constraintHorizontal_weight=".4"
                 android:gravity="center"
-                android:text="@string/remove"
-                bind:texttype="bold"
-                android:padding="5dp"
-                bind:layout_constraintStart_toStartOf="parent"
-                bind:layout_constraintEnd_toStartOf="@id/barrier"
-                bind:layout_constraintEnd_toEndOf="parent"
-                bind:layout_constraintTop_toBottomOf="@id/line"
                 android:onClick="@{view->handlers.removeFromCart(view,variantdata)}"
-                />
+                android:padding="5dp"
+                android:text="@string/remove"
+                android:visibility="visible"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintEnd_toStartOf="@id/barrier"
+                bind:layout_constraintHorizontal_weight=".4"
+                bind:layout_constraintStart_toStartOf="parent"
+                bind:layout_constraintTop_toBottomOf="@id/line"
+                bind:texttype="bold" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
+                android:id="@+id/barrier"
                 android:layout_width="1dp"
                 android:layout_height="35dp"
-                android:alpha="0.5"
-                android:id="@+id/barrier"
-                android:background="@color/gray_color"
-                bind:layout_constraintStart_toEndOf="@id/remove"
-                bind:layout_constraintTop_toBottomOf="@id/line"
-                bind:layout_constraintEnd_toStartOf="@id/movetowish"
-                bind:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                bind:texttype="normal"/>
+                android:alpha="0.5"
+                android:background="@color/gray_color"
+                bind:layout_constraintBottom_toBottomOf="parent"
+                bind:layout_constraintEnd_toStartOf="@id/movetowish"
+                bind:layout_constraintStart_toEndOf="@id/remove"
+                bind:layout_constraintTop_toBottomOf="@id/line"
+                bind:texttype="normal" />
+
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/movetowish"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_margin="2dp"
-                bind:layout_constraintHorizontal_weight=".6"
                 android:gravity="center"
-                android:text="@string/movetowish"
-                bind:texttype="bold"
-                android:padding="5dp"
-                bind:layout_constraintTop_toBottomOf="@id/line"
-                bind:layout_constraintStart_toEndOf="@id/barrier"
-                bind:layout_constraintEnd_toEndOf="parent"
                 android:onClick="@{view->handlers.moveToWishList(view,variantdata)}"
-                />
+                android:padding="5dp"
+                android:text="@string/movetowish"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintHorizontal_weight=".6"
+                bind:layout_constraintStart_toEndOf="@id/barrier"
+                bind:layout_constraintTop_toBottomOf="@id/line"
+                bind:texttype="bold" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
