--- a/base/src/main/res/layout/m_cartlist.xml
+++ b/base/src/main/res/layout/m_cartlist.xml
@@ -17,6 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/gray_color"
         android:visibility="gone">
 
         <androidx.core.widget.NestedScrollView
@@ -25,24 +26,53 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/bottomsection"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_weight="0.9">
+            app:layout_constraintVertical_weight="8.5">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/gray_color">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clearcart_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/light_cream"
+                    android:onClick="@{view->handler.clearCart(view)}"
+                    android:padding="15dp"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.shopify.shopifyapp.customviews.MageNativeTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/click_here_to_clear_your_cart"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:texttype="normal" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/delete_icon"
+                        android:tint="@color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cartlist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    bind:listitem="@layout/m_cartitem"
                     android:layoutAnimation="@anim/layout_animation"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@+id/giftcard_section"
-                    bind:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/clearcart_section"
+                    bind:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    bind:listitem="@layout/m_cartitem"></androidx.recyclerview.widget.RecyclerView>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/giftcard_section"
@@ -205,30 +235,28 @@
             android:id="@+id/bottomsection"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@drawable/radius_dialog_shape"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/scroll"
-            app:layout_constraintVertical_weight="0.1">
+            app:layout_constraintVertical_weight="1.5">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/grandsection"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:background="@color/gray_color"
-                app:layout_constraintHorizontal_weight="0.4"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                bind:layout_constraintEnd_toStartOf="@id/proceed">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.shopify.shopifyapp.customviews.MageNativeTextView
                     android:id="@+id/total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@{bottomdata.grandtotal}"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:texttype="bold" />
 
@@ -237,10 +265,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:text="@string/grandtotal"
                     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/total"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:texttype="bold" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -248,32 +278,66 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/proceed"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:background="@color/gray_color"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="0.6"
-                app:layout_constraintStart_toEndOf="@id/grandsection"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="0dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/gpay_but"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/grandsection">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.shopify.shopifyapp.customviews.MageNativeButton
                         android:id="@+id/proceedtocheck"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:layout_margin="2dp"
                         android:gravity="center"
                         android:onClick="@{view->handler.loadCheckout(view,bottomdata)}"
                         android:singleLine="true"
                         android:text="@string/proceed"
-                        app:buttontype="normal" />
+                        android:textSize="14sp"
+                        app:buttontype="normal"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/gpay_but"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/white"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/proceed"
+                app:layout_constraintTop_toBottomOf="@+id/grandsection">
+
+                <!--                <androidx.cardview.widget.CardView-->
+                <!--                    android:layout_width="wrap_content"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_margin="5dp"-->
+                <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
+                <!--                    app:layout_constraintTop_toTopOf="parent">-->
+
+                <include
+                    android:id="@+id/googlePayButton"
+                    layout="@layout/buy_with_googlepay_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!--                </androidx.cardview.widget.CardView>-->
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
