--- a/base/src/main/res/layout/m_fixedcustomisable.xml
+++ b/base/src/main/res/layout/m_fixedcustomisable.xml
@@ -112,10 +112,10 @@
                 android:layout_height="wrap_content"
                 app:texttype="normal"
                 android:id="@+id/timer_message"
-                android:visibility="gone"
                 android:text="@{productslider.timertextmessage}"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:visibility="@{productslider.timericon}"
                 app:layout_constraintTop_toBottomOf="@id/timericon"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
