--- a/base/src/main/res/layout/m_personalised.xml
+++ b/base/src/main/res/layout/m_personalised.xml
@@ -8,13 +8,20 @@
             name="commondata"
             type="com.shopify.shopifyapp.basesection.models.CommanModel" />
 
+        <import type="android.view.View" />
+
+        <variable
+            name="features"
+            type="com.shopify.shopifyapp.basesection.models.FeaturesModel" />
+
+
         <variable
             name="listdata"
             type="com.shopify.shopifyapp.basesection.models.ListData" />
 
         <variable
             name="clickproduct"
-            type="com.shopify.shopifyapp.productsection.adapters.ProductRecylerAdapter.Product" />
+            type="com.shopify.shopifyapp.personalised.adapters.PersonalisedAdapter.PersonalisedProduct" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -24,35 +31,62 @@
         bind:cardCornerRadius="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="275dp"
             android:background="@color/white"
-            android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}">
+            android:paddingBottom="4dp">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:contentDescription="@string/image"
+                android:onClick="@{(view) -> clickproduct.productClick(view,listdata)}"
                 bind:imageUrl="@{commondata.imageurl}"
-                bind:layout_constraintDimensionRatio="H,0.8:1"
+                bind:layout_constraintDimensionRatio="H,0.7:0.7"
                 bind:layout_constraintTop_toTopOf="parent" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/name"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="4dp"
                 android:ellipsize="end"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:maxLines="1"
                 android:text="@{listdata.textdata}"
+                android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                bind:layout_constraintEnd_toEndOf="parent"
-                bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@id/image"
                 bind:texttype="bold" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/wishlist_but"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="8dp"
+                android:onClick="@{(view) -> clickproduct.wishListAdd(view,listdata)}"
+                android:src="@drawable/wishlist_icon"
+                android:visibility="@{features.in_app_wishlist ? View.VISIBLE : View.GONE}"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/cart_but"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/cart_icon_bottom"
+                android:tint="@color/black"
+                android:visibility="gone"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintTop_toBottomOf="@+id/name" />
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/shortdescription"
@@ -66,6 +100,7 @@
                 android:paddingEnd="4dp"
                 android:text="@{listdata.description}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                android:visibility="gone"
                 bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@id/name"
                 bind:texttype="normal" />
@@ -74,41 +109,29 @@
                 android:id="@+id/specialprice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center_vertical"
                 android:text="@{listdata.specialprice}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
                 android:visibility="gone"
+                bind:layout_constraintEnd_toEndOf="parent"
                 bind:layout_constraintStart_toStartOf="parent"
                 bind:layout_constraintTop_toBottomOf="@id/shortdescription"
                 bind:texttype="bold" />
-
-            <!--            <com.shopify.shopifyapp.customviews.MageNativeTextView-->
-            <!--                android:id="@+id/offertext"-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginStart="5dp"-->
-            <!--                android:gravity="center_vertical"-->
-            <!--                android:text="@{listdata.offertext}"-->
-            <!--                android:textAppearance="?android:attr/textAppearanceListItemSmall"-->
-            <!--                android:visibility="gone"-->
-            <!--                bind:layout_constraintStart_toEndOf="@id/specialprice"-->
-            <!--                bind:layout_constraintTop_toBottomOf="@id/shortdescription"-->
-            <!--                bind:texttype="normal" />-->
 
             <com.shopify.shopifyapp.customviews.MageNativeTextView
                 android:id="@+id/regularprice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_vertical"
                 android:paddingBottom="10dp"
                 android:text="@{listdata.regularprice}"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                bind:layout_constraintStart_toEndOf="@id/specialprice"
-                bind:layout_constraintTop_toBottomOf="@id/shortdescription"
+                bind:layout_constraintEnd_toEndOf="parent"
+                bind:layout_constraintStart_toStartOf="parent"
+                bind:layout_constraintTop_toBottomOf="@id/specialprice"
                 bind:texttype="normal" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
