--- a/base/src/main/res/layout/m_productview.xml
+++ b/base/src/main/res/layout/m_productview.xml
@@ -36,8 +36,8 @@
                 bind:layout_constraintDimensionRatio="H,1:1.2"
                 bind:layout_constraintTop_toTopOf="parent" />
 
-
             <androidx.cardview.widget.CardView
+                android:id="@+id/review_card_section"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
