--- a/base/src/main/res/layout/m_searchitem.xml
+++ b/base/src/main/res/layout/m_searchitem.xml
@@ -30,6 +30,14 @@
             bind:layout_constraintStart_toStartOf="parent"
             bind:layout_constraintBottom_toBottomOf="parent"
             />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/out_of_stock"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/outofstock"
+            android:visibility="gone"
+            bind:layout_constraintBottom_toBottomOf="@+id/image"
+            bind:layout_constraintEnd_toEndOf="@+id/image" />
         <com.shopify.shopifyapp.customviews.MageNativeTextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
